syntax = "proto3";
package pb;

message CreateTicketRequest {
  string user_token = 1;
}

message CreateTicketReply {
  string ticket = 1;
}


message SigningKeyRequest {}

message SigningKeyReply {
  // DER-encoded public key used to sign JWTs on this server.
  bytes signing_key = 1;
}

service Identity {
  // CreateTicket creates a temporary token, called ticket, this has a
  // limited timelife and is used in requests to a service in behalf of the user,
  // the provided ticket should be used to any consecutive call, ideally should
  // be sent on  `ticket` header
  // (authorization header is tipically used by service to service)
  rpc CreateTicket(CreateTicketRequest) returns (CreateTicketReply) {}
  rpc SigningKey(SigningKeyRequest) returns(SigningKeyReply) {}
}
